[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Slug.gd" type="Script" id=1]
[ext_resource path="res://Props/tileset.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="Slug" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 112, 48, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="BulletTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BulletTime" to="." method="_on_BulletTime_timeout"]
